# oocana-rust

./: .editorconfig  .gitignore  .npmrc  CHANGELOG.md  CIRCULAR_DEPENDENCY_SUPPORT.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  cspell.json  debug.md  npm.js  publish.js  rumqttd.toml
.devcontainer/: build.sh  devcontainer.json  setup.sh  start.sh
.devcontainer/ovmlayer/: devcontainer-feature.json  install.sh
.devcontainer/zstd/: devcontainer-feature.json  install.sh
.github/: .release-please-manifest.json  CODEOWNERS  config.toml  release-please-config.json  release.yml
.github/actions/layer/: action.yaml
.github/actions/oocana-node/: action.yml
.github/actions/ovmlayer/: action.yml
.github/workflows/: build-and-test.yml  check-pr-title-format.yml  layer-export.yml  layer.yml  oocana-node.yml  oocana-python.yml  ovmlayer.yml  publish.yml  release.yml
cli/: Cargo.toml
cli/src/: cache.rs  commands.rs  fun.rs  layer.rs  lib.rs  parser.rs  query.rs  tests.rs
cli/src/fun/: arg.rs  mod.rs
core/: Cargo.toml
core/src/: graph.rs  lib.rs  one_shot.rs  pkg_finder.rs  sink.rs
core/src/sink/: block_input_sink.rs  block_task_sink.rs  pipeline_task_sink.rs
docs/: configuration.md  flow.md  how-oocana-run.md  service.md  shell-executor.md
docs/plans/: 2026-01-29-utils-refactor.md
examples/: graph.json  package.oo.yaml
examples/applet/: flow.oo.yaml
examples/applet/pkg_a/: package.oo.yaml
examples/base/: flow.oo.yaml
examples/base/blk_a/: Cargo.toml  block.oo.yaml
examples/base/blk_a/src/: main.rs
examples/base/shell_a/: block.oo.yaml
examples/concurrency/: flow.oo.yaml
examples/concurrency/blk_a/: Cargo.toml  block.oo.yaml
examples/condition/: flow.oo.yaml
examples/condition/end/: Cargo.toml  block.oo.yaml
examples/condition/start/: Cargo.toml  block.oo.yaml
examples/flows/pkg/: flow.oo.yaml
examples/input/: flow.oo.yaml
examples/input/blk_a/: block.oo.yaml
examples/input/blk_i/: Cargo.toml  block.oo.yaml
examples/remote_task/: flow.oo.yaml
examples/remote_task/hide-example/: .metadata.oo.json  package.oo.yaml
examples/remote_task/mock_server/: Cargo.toml
examples/remote_task/mock_server/src/: main.rs
examples/remote_task/secret_pkg/: .metadata.oo.json  package.oo.yaml
examples/run_to_node/: flow.oo.yaml
examples/run_to_node/identity/: Cargo.toml  block.oo.yaml
examples/service/: flow.oo.yaml
examples/shell/: flow.oo.yaml
job/: Cargo.toml
job/src/: lib.rs  scope.rs
layer/: Cargo.toml  README.md  setup.sh
layer/src/: cli.rs  external_layer_store.rs  injection_layer.rs  injection_store.rs  layer.rs  layer_settings.rs  lib.rs  ovmlayer.rs  package_layer.rs  package_store.rs  registry_layer_store.rs  runtime_layer.rs
layer/tests/: package.rs  runtime.rs
layer/tests/data/simple/: package.oo.yaml
layer/tests/data/vim/: package.oo.yaml
mainframe/: Cargo.toml
mainframe/src/: client.rs  lib.rs  reporter.rs  scheduler.rs  server.rs  sqlite.rs  worker.rs
mainframe/src/reporter/: block_reporter.rs  flow_reporter.rs  mod.rs
mainframe_mqtt/: Cargo.toml
mainframe_mqtt/src/: lib.rs  reporter.rs  scheduler.rs  worker.rs
manifest_meta/: Cargo.toml  README.md
manifest_meta/src/: applet.rs  applet_reader.rs  block.rs  block_reader.rs  block_resolver.rs  condition.rs  connections.rs  flow.rs  flow_reader.rs  flow_resolver.rs  lib.rs  node.rs  scope.rs  service.rs  service_resolver.rs  signal.rs  slot.rs  task.rs
manifest_meta/src/node/: common.rs  definition.rs  mod.rs  subflow.rs
manifest_meta/tests/: flow_package_test.rs  flow_recursive_test.rs  flow_test.rs  read_flow_or_block_test.rs
manifest_reader/: Cargo.toml  README.md
manifest_reader/src/: applet_manifest_reader.rs  block_manifest_reader.rs  flow_manifest_reader.rs  lib.rs  manifest_file_reader.rs  package_manifest_reader.rs  reader.rs
manifest_reader/src/block_manifest_reader/: applet.rs  block.rs  block_manifest_finder.rs  node.rs
manifest_reader/src/manifest/: mod.rs  package.rs  service.rs
manifest_reader/src/manifest/block/: condition.rs  flow.rs  handle.rs  mod.rs  service.rs  slot.rs  task.rs
manifest_reader/src/manifest/node/: common.rs  condition.rs  definition.rs  input_from.rs  mod.rs  node.rs  service.rs  slot.rs  subflow.rs  task.rs  value.rs
manifest_reader/src/path_finder/: block.rs  finder.rs  flow.rs  manifest_file.rs  mod.rs  package.rs  path_finder.rs  search_paths.rs  service.rs
manifest_reader/tests/: block_manifest_reader_test.rs  flow.oo.yaml  flow_manifest_reader_test.rs  reader_test.rs
manifest_reader/tests/block_manifest_reader_test/blocks1/task-blk1/: block.oo.yaml
manifest_reader/tests/fixtures/: block.oo.yaml  package.oo.yaml  service.oo.yaml  slotflow.oo.yaml
npm/: .gitignore  README.md  index.js  npm.mjs  publish.js  publish.mjs  target.mjs  utils.mjs
one_shot/: Cargo.toml
one_shot/src/: one_shot.rs
remote_job_client/: Cargo.toml  README.md
remote_job_client/src/: lib.rs  mock.rs
runtime/: Cargo.toml
runtime/src/: block_job.rs  block_status.rs  delay_abort.rs  lib.rs  remote_task_config.rs  shared.rs
runtime/src/block_job/: applet_job.rs  block.rs  condition.rs  flow_job.rs  input.rs  job_handle.rs  listener.rs  mod.rs  remote_block_job.rs  service_job.rs  task_job.rs
runtime/src/block_job/flow_job/: node_input_values.rs  run_to_node.rs
runtime/src/flow_job/: block_request.rs  cache.rs  flow.rs  mod.rs  node_input_values.rs  run_to_node.rs  upstream.rs
runtime/src/run/: mod.rs
sdk/: Cargo.toml
sdk/src/: args.rs  lib.rs  sdk.rs
src/: main.rs
src/resources/: default_config.toml
tests/: test_cli.rs  test_query.rs  test_remote_task.rs  test_run.rs
tests/fixtures/: connector-flow.oo.yaml
user_task_client/: Cargo.toml
user_task_client/src/: lib.rs
utils/: Cargo.toml
utils/src/: app_config.rs  cache.rs  config.rs  env.rs  error.rs  lib.rs  logger.rs  output.rs  path.rs  settings.rs
utils/src/config/: app.rs  config.rs  global_config.rs  mod.rs  run_config.rs
utils/tests/: run_extra_paths.toml  sample.toml  test.rs
vault/: Cargo.toml
vault/src/: lib.rs
(+45 files in other folders)
