[package]
name = "oocana"
version = "0.23.2"
authors = ["CRIMX <straybugs@gmail.com>"]
edition = "2021"
repository = "https://github.com/oomol/oocana-rust"
readme = "README.md"
 
keywords = ["cli", "pipeline", "flow", "graph"]
description = """
A CLI tool for building data pipelines.
"""

[workspace]
members = [
    "utils",
    "cli",
    "one_shot",
    "sdk",
    "job",
    "runtime",
    "mainframe",
    "mainframe_mqtt",
    "manifest_reader",
    "manifest_meta",
    "examples/run_to_node/identity",
    "examples/base/blk_a",
    "examples/base/pkg_a/blocks/blk-b",
    "examples/self_block/blocks/blk_d",
    "examples/concurrency/blk_a",
    "examples/concurrency/pkg_a/blocks/blk-b",
    "examples/flows/pkg/pkg_v-0.1.0/blocks/blk-b",
    "layer",
]

[features]
default = ["backtrace"]
nightly = ["utils/nightly"]
termlog = ["utils/termlog"]
syslog = ["utils/syslog"]
backtrace = []

[dependencies]
utils = { path = "utils" }
cli = { path = "cli"}
one_shot = { path = "./one_shot" }
human-panic = "1.0.3"
better-panic = "0.3.0"
tracing = "0.1.40"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"

[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
strip = true
opt-level="z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
