[package]
name = "cli"
version = "0.5.5"
authors = ["CRIMX <straybugs@gmail.com>"]
description = "CLI interface for vocana"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
core = { path = "../core" }
clap_complete = "3.0"

[dependencies.clap]
version = "3.0.14"
features = ["cargo", "derive"]

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
