[package]
name = "cli"
version = "0.27.16"
authors = ["CRIMX <straybugs@gmail.com>"]
description = "CLI interface for oocana"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
one_shot = { path = "../one_shot" }
runtime = {path = "../runtime"}
layer = { path = "../layer" }
tracing = "0.1.40"
clap = { version = "4.5.20", features = ["derive"] }
dirs = "5.0.1"
manifest_meta = { path = "../manifest_meta"}
manifest_reader = { path = "../manifest_reader"}
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
