[package]
name = "core"
version = "0.0.1"
authors = ["CRIMX <straybugs@gmail.com>"]
description = "Vocana runner core"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
mainframe = { path = "../mainframe"}
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
rand = "0.8.4"
log = "0.4.14"
nanoid = "0.4.0"
walkdir = "2"
