[package]
name = "job"
version = "0.30.24"
authors = ["CRIMX <straybugs@gmail.com>"]
description = "Oocana runner job"
edition = "2021"

[dependencies]
manifest_meta = { path = "../manifest_meta" }
utils = {path = "../utils"}
serde = { version = "1.0.149", features = ["derive", "rc"] }
serde_json = {version = "1.0.89", features = ["preserve_order"] }
derive_more = "0.99.17"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }