[package]
name = "mainframe"
version = "0.0.1"
authors = ["CRIMX <straybugs@gmail.com>"]
description = "Vocana runner mainframe"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
zmq = "0.10.0"
serde = { version = "1.0.149", features = ["derive", "rc"] }
serde_json = "1.0.89"
log = "0.4.14"
