[package]
name = "mainframe"
version = "0.0.1"
authors = ["CRIMX <straybugs@gmail.com>"]
description = "Oocana runner mainframe"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
job = { path = "../job" }
manifest_meta = { path = "../manifest_meta" }
serde = { version = "1.0.149", features = ["derive", "rc"] }
serde_json = "1.0.89"
log = "0.4.14"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
flume = { version = "0.11.0", default-features = false, features = ["async"] }
async-trait = "0.1.74"