[package]
name = "mainframe"
version = "0.28.1"
authors = ["CRIMX <straybugs@gmail.com>"]
description = "Oocana runner mainframe"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
job = { path = "../job" }
layer = { path = "../layer"}
manifest_meta = { path = "../manifest_meta" }
serde = { version = "1.0.149", features = ["derive", "rc"] }
serde_json = "1.0.89"
tracing = "0.1.40"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
flume = { version = "0.11.0", default-features = false, features = ["async"] }
async-trait = "0.1.74"
port_check = "0.2.1"
