[package]
name = "mainframe_mqtt"
version = "0.0.1"
authors = ["CRIMX <straybugs@gmail.com>"]
description = "Oocana runner mainframe MQTT runtime"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
mainframe = { path = "../mainframe" }
job = { path = "../job" }
serde = { version = "1.0.149", features = ["derive", "rc"] }
serde_json = "1.0.89"
log = "0.4.14"
rumqttc = "0.22.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
flume = { version = "0.11.0", default-features = false, features = ["async"] }
async-trait = "0.1.74"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
