[package]
name = "mainframe_mqtt"
version = "0.27.16"
authors = ["CRIMX <straybugs@gmail.com>"]
description = "Oocana runner mainframe MQTT runtime"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
mainframe = { path = "../mainframe" }
job = { path = "../job" }
serde = { version = "1.0.149", features = ["derive", "rc"] }
serde_json = "1.0.89"
tracing = "0.1.40"
rumqttc = "0.24.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
flume = { version = "0.11.0", default-features = false, features = ["async"] }
async-trait = "0.1.74"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
