[package]
name = "manifest_reader"
version = "0.0.1"
authors = ["CRIMX <straybugs@gmail.com>"]
description = "Oocana block project reader"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
serde = { version = "1.0.149", features = ["derive", "rc"] }
serde_yaml = "0.9"
serde_json = "1.0.89"
log = "0.4.14"
json-patch ="0.2.6"
path-clean = "1.0.1"
derive_more = "0.99.17"