[package]
name = "one_shot"
version = "0.29.16"
authors = ["CRIMX <straybugs@gmail.com>"]
description = "Oocana runner core"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
runtime = { path = "../runtime" }
job = { path = "../job" }
mainframe = { path = "../mainframe"}
mainframe_mqtt = { path = "../mainframe_mqtt"}
manifest_meta = { path = "../manifest_meta"}
manifest_reader = { path = "../manifest_reader"}
serde = { version = "1.0.149", features = ["derive"] }
serde_json = {version = "1.0.89", features = ["preserve_order"] }
rand = "0.8.4"
tracing = "0.1.40"
tokio = { version = "1.44.2", features = ["full"] }
path-clean = "1.0.1"
flume = { version = "0.11.0", default-features = false, features = ["async"] }