[package]
name = "runtime"
version = "0.0.1"
authors = ["CRIMX <straybugs@gmail.com>"]
description = "Vocana runner rumtime"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
job = { path = "../job"}
mainframe = { path = "../mainframe"}
mainframe_mqtt = { path = "../mainframe_mqtt"}
manifest_meta = { path = "../manifest_meta"}
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
rand = "0.8.4"
log = "0.4.14"
tokio = { version = "1.28.2", features = ["full"] }
path-clean = "1.0.1"
flume = { version = "0.11.0", default-features = false, features = ["async"] }