[package]
name = "runtime"
version = "0.30.33"
authors = ["CRIMX <straybugs@gmail.com>"]
description = "Oocana runner runtime"
edition = "2021"

[dependencies]
layer = { path = "../layer" }
utils = { path = "../utils" }
job = { path = "../job"}
vault = { path = "../vault" }
mainframe = { path = "../mainframe"}
manifest_meta = { path = "../manifest_meta"}
manifest_reader = { path = "../manifest_reader"}
serde = { version = "1.0.149", features = ["derive"] }
serde_json = {version = "1.0.89", features = ["preserve_order"] }
rand = "0.8.4"
tracing = "0.1.40"
tokio = { version = "1.44.2", features = ["full"] }
path-clean = "1.0.1"
flume = { version = "0.11.0", default-features = false, features = ["async"] }
dirs = "5.0.1"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
jsonschema = "0.30.0"
