[package]
name = "oocana_sdk"
version = "0.29.9"
authors = ["CRIMX <straybugs@gmail.com>"]
description = "Oocana runner SDK in Rust"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
job = { path = "../job" }
manifest_meta = { path = "../manifest_meta"}
mainframe = { path = "../mainframe" }
mainframe_mqtt = { path = "../mainframe_mqtt" }
clap = { version = "3.0.14", features = ["cargo", "derive"] }
rumqttc = "0.22.0"
serde = { version = "1.0.149", features = ["derive", "rc"] }
serde_json = {version = "1.0.89", features = ["preserve_order"] }
tokio = { version = "1.44.2", features = ["full"] }