[package]
name = "utils"
version = "0.30.22"
authors = ["CRIMX <straybugs@gmail.com>"]
description = "Various utilities and functionalities"
edition = "2021"

[features]
nightly = []
termlog = []
syslog = []

[dependencies]
thiserror = "1.0.30"
anyhow = { version = "1.0.66", features = ["backtrace"] }
lazy_static = "1.4.0"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}
tracing-appender = "0.2.3"
serde = { version = "1.0.149", features = ["derive", "rc"] }
serde_json = {version = "1.0.89", features = ["preserve_order"] }
serde_yaml = "0.9"
dirs = "5.0.1"
log = "0.4.14"
sha2 = "0.10.8"
hex = "0.4.3"
config = "0.15.11"
