[package]
name = "vault"
version = "0.30.5"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"
utils = { path = "../utils" }

[dev-dependencies]
wiremock = "0.6.4"
