[package]
name = "vault"
version = "0.30.15"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"
utils = { path = "../utils" }

[dev-dependencies]
wiremock = "0.6.4"
