[package]
name = "mock_server"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "mock_server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
